begin client working