@@ -224,8 +224,8 @@ public class ServiceTests {
         assert(listGamesResponse instanceof ListGameResponse);
         ArrayList<GameData> games = ((ListGameResponse) listGamesResponse).games();
         assert(games.size() == 2);
-        assert(games.getFirst().gameID() == 1);
-        assert (games.getFirst().gameName().equals("testGame"));
+        assert(games.get(0).gameID() == 1);
+        assert (games.get(0).gameName().equals("testGame"));
         assert(games.get(0).whiteUsername() == null);
         assert(games.get(0).blackUsername() == null);
         assert(games.get(1).gameID() == 2);
